# cxx_prog_env

./: CMakeLists.txt  LICENSE  README.md
cmake/: cxx_prog_env-config.cmake.in
examples/: CMakeLists.txt  example.cpp
include/: program_arguments
include/detail/: iostring_ref
src/: CMakeLists.txt  iostring_ref.cpp  program_arguments.cpp
src/get_argc_argv/: get_argc_argv.c
src/get_argc_argv/include/: get_argc_argv  get_argc_argv.h
src/text_encoding/: text_encoding.cpp
src/text_encoding/include/: text_encoding
